# CurbScout

./: .env.example  .firebaserc  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  docker-compose.yml  firestore.indexes.json  firestore.rules  readme.md  storage.rules
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
.specify/specs/001-local-pipeline-mvp/: acceleration.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/vastai-deploy-kit/: README.md
.specify/vastai-deploy-kit/docs/: AUTONOMOUS_DEPLOY_GUIDE.md  AUTO_SHUTDOWN.md  CREDENTIALS.md  GPU_GUIDE.md  INTEGRATION_GUIDE.md  LESSONS_LEARNED.md
.specify/vastai-deploy-kit/examples/: config.yaml  submit-batch-workflow.md
.specify/vastai-deploy-kit/go-sdk/: README.md  go.mod  (+1 more)
deploy/: autokill.sh  bootstrap_training.sh  download_dataset.py  export.sh  train.py  upload_teardown.py
pipeline/: main.py  pyproject.toml
pipeline/curbscout/: accelerator.py  classifier.py  db.py  dedup.py  detector.py  ingest.py  logger.py  ocr.py  poll.py  rules.py  sampler.py  sync.py  sync_models.py  vast_client.py
scripts/: ci.sh  com.curbscout.pipeline.plist  run-pipeline.sh  setup-gcp-infra.sh
specs/002-curb-intelligence/: data-model.md  research.md  spec.md  tasks.md
specs/003-active-learning-loop/: data-model.md  research.md  spec.md  tasks.md
specs/004-multi-device-collab/: spec.md  tasks.md
specs/005-native-macos-app/: spec.md  tasks.md
web/: Dockerfile  deploy.sh  package-lock.json  package.json
web/src/: app.css  hooks.server.ts
(+65 files in other folders)
